Forecast for the following 5 days is being displayed. It needs to be styled. HTML needs to be fixed. I took a lot of help from code coaches, classmates and stack overflow for this section.

--- a/code/style.css
+++ b/code/style.css
@@ -50,11 +50,6 @@ p {
   text-align: center;
   padding-top: 10px;
 }
-#highLow {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-}
 #weather-wrap {
   display: flex;
   flex-direction: column;
@@ -81,3 +76,10 @@ header input {
   background-color: rgb(196, 214, 221);
 }
 /*FORECAST*/
+#weatherForecast {
+  background-color: white;
+  display: row;
+  align-items: center;
+  text-align: center;
+  font-size: 18px;
+}
